<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="www.mynumfacts.com.numberfacts.activities.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_category"
            android:textSize="18sp" />


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:defaultFocusHighlightEnabled="true"
            android:focusedByDefault="true"
            android:importantForAutofill="yes"
            tools:defaultFocusHighlightEnabled="true"
            tools:focusedByDefault="true"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/textView_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_number"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editText_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/default_10"
            android:inputType="number"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="volly"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/textView_fact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_fact"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

    </LinearLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
